VeraSandBox2016/src/objects/Country__c.object
<CustomObject>
    <fields>
        <fullName>DAC_List__c</fullName>
        <label>DAC List</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HRC_Member__c</fullName>
        <description>Is country currently on UN Human Rights Council?</description>
        <label>HRC Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JRRID__c</fullName>
        <displayFormat>COU-{00000}</displayFormat>
        <label>JRRID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>MENA_JRR__c</fullName>
        <label>MENA (JRR)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Official_Name__c</fullName>
        <label>Official Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_UN__c</fullName>
        <label>Region (UN)</label>
        <picklist>
            <picklistValues>
                <fullName>Africa : Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa : Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: Caribbean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas: South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Central</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: South East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia: Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Eastern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Northern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Southern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe: Western</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania: Aus-NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oceania: Pacific Islands</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rome_Statute__c</fullName>
        <description>Is state a signatory to the Rome Statute (ICC)?</description>
        <label>Rome Statute</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UN_Member__c</fullName>
        <label>UN Member</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Country</label>
    <listViews>
        <fullName>AllCountries</fullName>
        <columns>NAME</columns>
        <columns>UN_Member__c</columns>
        <columns>Region_UN__c</columns>
        <columns>MENA_JRR__c</columns>
        <columns>DAC_List__c</columns>
        <columns>HRC_Member__c</columns>
        <columns>Rome_Statute__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Countries</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>